@@ -1,5 +1,9 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-12-21)
+ * (Windows) Now the short names are used too for subtitle files (except
+    idx/sub) and external audio files.
+
 (2007-12-20)
  * (Windows) Added a new option for the config file: use_short_pathnames.
    If set to true, smplayer will pass to mplayer the short filename(8+3)
